# vendus-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/commands/: vendus-pos.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/vendus_cli/: __init__.py  __main__.py  api.py  cli.py  dates.py  format.py
src/vendus_cli/commands/: catalog.py  inspect_cmd.py  meta.py  payments.py  query.py  receipts.py  sales.py  sync.py
tests/: test_dates.py  test_format.py
