[project]
name = "vendus-cli"
version = "0.1.0"
description = "Task-oriented CLI for Cegid Vendus POS — sales, payments, catalog, receipts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Larry Jiggler" }]
keywords = ["vendus", "pos", "cegid", "cli", "sales", "invoicing", "point-of-sale"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/larryjiggler-glitch/vendus-cli"
Repository = "https://github.com/larryjiggler-glitch/vendus-cli"
Issues = "https://github.com/larryjiggler-glitch/vendus-cli/issues"
Changelog = "https://github.com/larryjiggler-glitch/vendus-cli/blob/main/CHANGELOG.md"

[project.scripts]
vendus-pos = "vendus_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vendus_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
